agregados enlaces de proyectos

--- a/index.html
+++ b/index.html
@@ -63,13 +63,15 @@
             <div class="web uk-child-width-1-6@m uk-text-center" uk-grid>
                 <div>
                     <div class="uk-tile uk-padding-small">
-                        <img src="assets/imgs/tools/html5.svg" alt="HTML5">
+                        <a class="uk-margin-small" title="Intermedio" uk-tooltip="pos:bottom">
+                            <img src="assets/imgs/tools/html5.svg" alt="HTML5">
+                        </a>
                         <p class="t-g-claro">HTML 5</p>
                     </div>
                 </div>
                 <div>
                     <div class="uk-tile uk-padding-small">
-                        <a class="uk-button uk-margin-small" title="Intermedio" uk-tooltip="pos:top-right">
+                        <a class="uk-margin-small" title="Intermedio" uk-tooltip="pos:bottom">
                             <img src="assets/imgs/tools/css3.svg" alt="CSS 3">
                         </a>
                         <p class="t-g-claro">CSS 3</p>
@@ -77,14 +79,34 @@
                 </div>
                 <div>
                     <div class="uk-tile uk-padding-small">
-                        <img src="assets/imgs/tools/js.svg" alt="JavaScript">
+                        <a class="uk-margin-small" title="Intermedio" uk-tooltip="pos:bottom">
+                            <img src="assets/imgs/tools/js.svg" alt="JavaScript">
+                        </a>
                         <p class="t-g-claro">JavaScript</p>
                     </div>
                 </div>
                 <div>
                     <div class="uk-tile uk-padding-small">
-                        <img src="assets/imgs/tools/jq.svg" alt="jQuery">
+                        <a class="uk-margin-small" title="Intermedio" uk-tooltip="pos:bottom">
+                            <img src="assets/imgs/tools/jq.svg" alt="jQuery">
+                        </a>
                         <p class="t-g-claro">jQuery</p>
+                    </div>
+                </div>
+                <div>
+                    <div class="uk-tile uk-padding-small">
+                        <a class="uk-margin-small" title="Básico" uk-tooltip="pos:bottom">
+                            <img src="assets/imgs/tools/sss.svg" alt="Sass">
+                        </a>
+                        <p class="t-g-claro">Sass</p>
+                    </div>
+                </div>
+                <div>
+                    <div class="uk-tile uk-padding-small">
+                        <a class="uk-margin-small" title="Básico" uk-tooltip="pos:bottom">
+                            <img src="assets/imgs/tools/rct.svg" alt="React">
+                        </a>
+                        <p class="t-g-claro">React</p>
                     </div>
                 </div>
             </div>
@@ -93,19 +115,25 @@
             <div class="uk-child-width-1-5@m uk-text-center" uk-grid>
                 <div>
                     <div class="uk-tile uk-padding-small">
-                        <img src="assets/imgs/tools/bt.svg" alt="Bootstrap">
+                        <a class="uk-margin-small" title="Intermedio" uk-tooltip="pos:bottom">
+                            <img src="assets/imgs/tools/bt.svg" alt="Bootstrap">
+                        </a>
                         <p class="t-g-claro">Bootstrap</p>
                     </div>
                 </div>
                 <div>
                     <div class="uk-tile uk-padding-small">
-                        <img src="assets/imgs/tools/mtz.svg" alt="Materialize">
+                        <a class="uk-margin-small" title="Intermedio" uk-tooltip="pos:bottom">
+                            <img src="assets/imgs/tools/mtz.svg" alt="Materialize">
+                        </a>
                         <p class="t-g-claro">Materialize</p>
                     </div>
                 </div>
                 <div>
                     <div class="uk-tile uk-padding-small">
-                        <img src="assets/imgs/tools/uik.svg" alt="UIkit">
+                        <a class="uk-margin-small" title="Intermedio" uk-tooltip="pos:bottom">
+                            <img src="assets/imgs/tools/uik.svg" alt="UIkit">
+                        </a>
                         <p class="t-g-claro">UIkit</p>
                     </div>
                 </div>
@@ -115,31 +143,41 @@
             <div class="uk-child-width-1-5@m uk-text-center" uk-grid>
                 <div>
                     <div class="uk-tile uk-padding-small">
-                        <img src="assets/imgs/tools/ai.svg" alt="Illustrator">
+                        <a class="uk-margin-small" title="Avanzado" uk-tooltip="pos:bottom">
+                            <img src="assets/imgs/tools/ai.svg" alt="Illustrator">
+                        </a>
                         <p class="t-g-claro">Illustator</p>
                     </div>
                 </div>
                 <div>
                     <div class="uk-tile uk-padding-small">
-                        <img src="assets/imgs/tools/ps.svg" alt="Photoshop">
+                        <a class="uk-margin-small" title="Avanzado" uk-tooltip="pos:bottom">
+                            <img src="assets/imgs/tools/ps.svg" alt="Photoshop">
+                        </a>
                         <p class="t-g-claro">Photoshop</p>
                     </div>
                 </div>
                 <div>
                     <div class="uk-tile uk-padding-small">
-                        <img src="assets/imgs/tools/id.svg" alt="InDesign">
+                        <a class="uk-margin-small" title="Intermedio" uk-tooltip="pos:bottom">
+                            <img src="assets/imgs/tools/id.svg" alt="InDesign">
+                        </a>
                         <p class="t-g-claro">In Design</p>
                     </div>
                 </div>
                 <div>
                     <div class="uk-tile uk-padding-small">
-                        <img src="assets/imgs/tools/au.svg" alt="Audition">
+                        <a class="uk-margin-small" title="Básico" uk-tooltip="pos:bottom">
+                            <img src="assets/imgs/tools/au.svg" alt="Audition">
+                        </a>
                         <p class="t-g-claro">Audition</p>
                     </div>
                 </div>
                 <div>
                     <div class="uk-tile uk-padding-small">
-                        <img src="assets/imgs/tools/ae.svg" alt="AfterEffects">
+                        <a class="uk-margin-small" title="Básico" uk-tooltip="pos:bottom">
+                            <img src="assets/imgs/tools/ae.svg" alt="AfterEffects">
+                        </a>
                         <p class="t-g-claro">After Effects</p>
                     </div>
                 </div>
@@ -158,7 +196,7 @@
                     <div class="uk-inline-clip uk-transition-toggle">
                         <img src="assets/imgs/proyectos/lyft.png" alt="lyft">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
-                            <h3><b>Lyft</b></h3>
+                            <h2><b>Lyft</b></h2>
                             <p class="">Maquetación de landing page con flexbox.</p>
                             <div>
                                 <a target="_blank" href="https://dianix.github.io/lyft/index.html" class="t-verde m-lateral" uk-icon="icon: desktop; ratio:2"></a>
@@ -171,7 +209,7 @@
                     <div class="uk-inline-clip uk-transition-toggle">
                         <img src="assets/imgs/proyectos/labcar.png" alt="labcar">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
-                            <h3><b>Labcar</b></h3>
+                            <h2><b>Labcar</b></h2>
                             <p class="">Maquetación y funcionalidad apoyadas en Bootstrap. Responsive.</p>
                             <div>
                                 <a target="_blank" href="https://dianix.github.io/labcar/" class="t-verde m-lateral" uk-icon="icon: desktop; ratio:2"></a>
@@ -184,7 +222,7 @@
                     <div class="uk-inline-clip uk-transition-toggle">
                         <img src="assets/imgs/proyectos/applove.png" alt="applove">
                         <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
-                            <h3><b>Applove</b></h3>
+                            <h2><b>Applove</b></h2>
                             <p class="">Maquetación de landing page con uso de grid.</p>
                             <div>
                                 <a target="_blank" href="https://dianix.github.io/applove2/" class="t-verde m-lateral" uk-icon="icon: desktop; ratio:2"></a>
@@ -206,21 +244,29 @@
                 <div class="uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
                         <img src="assets/imgs/proyectos/twitter.png" alt="twitter">
-                        <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary uk-text-center uk-text-middle">
-                            <a href="" class="t-verde uk-text-large bold uk-margin-remove">Twitter</a>
-                            <p class=" uk-margin-remove">Funcionalidad para contar caracteres, publicar y borrar mensajes y estilos con materialize.</p>
+                        <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
+                            <h2><b>Twitter</b></h2>
+                            <p class="">Funcionalidad para contar caracteres, publicar y borrar mensajes con jQuery y estilos con materialize.</p>
+                            <div>
+                                <a target="_blank" href="https://dianix.github.io/twitter/" class="t-verde m-lateral" uk-icon="icon: desktop; ratio:2"></a>
+                                <a target="_blank" href="https://github.com/dianix/twitter" class="t-verde m-lateral" uk-icon="icon: github-alt; ratio:2"></a>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
                         <img src="assets/imgs/proyectos/antojitos.mx.png" alt="antojitosmx">
-                        <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary uk-text-center uk-text-middle">
-                            <a href="" class="t-verde uk-text-large bold uk-margin-remove">Antojitos.mx</a>
+                        <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
+                            <h2><b>Antojitos.mx</b></h2>                            
                             <p class=" uk-margin-remove">Uso de API google maps y estilos con Materialize.</p>
+                            <div>
+                                <a target="_blank" href="https://dianix.github.io/antojitos.mx/" class="t-verde m-lateral" uk-icon="icon: desktop; ratio:2"></a>
+                                <a target="_blank" href="https://github.com/dianix/antojitos.mx" class="t-verde m-lateral" uk-icon="icon: github-alt; ratio:2"></a>
+                            </div>
                         </div>
                     </div>
-                </div>
+                </div>                
                 <!-- <div class="uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
                         <img src="assets/imgs/proyectos/foro.png" alt="foro">
@@ -233,12 +279,16 @@
                 <div class="uk-text-center">
                     <div class="uk-inline-clip uk-transition-toggle">
                         <img src="assets/imgs/proyectos/pokedex.png" alt="pokedex">
-                        <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary uk-text-center uk-text-middle">
-                            <a href="" class="t-verde uk-text-large bold uk-margin-remove">Pokedex</a>
+                        <div class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-primary  uk-margin-remove">
+                            <h2><b>Pokedex</b></h2>                            
                             <p class=" uk-margin-remove">AJAX para consumo de API y estilos con materialize.</p>
+                            <div>
+                                <a target="_blank" href="https://dianix.github.io/pokedex/public/" class="t-verde m-lateral" uk-icon="icon: desktop; ratio:2"></a>
+                                <a target="_blank" href="https://github.com/dianix/pokedex" class="t-verde m-lateral" uk-icon="icon: github-alt; ratio:2"></a>
+                            </div>
                         </div>
                     </div>
-                </div>
+                </div>              
 
             </div>
         </div>
