ajustes de espacios en footer

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             <h2 class="t-g-claro asap-b">Contáctame</h2>
         </div>
         <div class="uk-grid uk-child-width-1-1@s uk-text-center">
-            <div class="uk-text-small">
+            <div class="uk-text-small mi-nombre">
                 <p class="uk-text-lead t-g-claro">D.C.G. Diana B. Vázquez Camacho</p>
             </div>
             <div>
