--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <div class="uk-flex uk-flex-column uk-flex-middle uk-flex-center">
             <h1 class="uk-margin-medium-top uk-heading-primary t-uva asap-b">Diana Vázquez</h1>
             <h2 class="uk-margin-remove t-g-azul julius">Front End <span class="t-uva asap-r">&</span> Diseño</h2>
+            <a target="_blank" class="uk-button uk-button-danger uk-margin-large-top" href="./assets/docs/CVDianaVazquez2017.pdf">Ver Curriculum</a>
         </div>
         <div class="uk-flex uk-flex-column uk-flex-middle uk-flex-center">
 
