agregada animación en foto-acerca de mi

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         </div>
         <div class="uk-flex uk-flex-column uk-flex-middle uk-flex-center">
 
-            <div class="uk-text-center">
-                <div id="yop" class="uk-inline-clip uk-transition-toggle">
-                    <a id="diana" href=""><img src="assets/imgs/yop.jpg" class="uk-border-circle" alt="Diana V."></a>
+            <div id="yop" class="uk-text-center animated bounce">
+                <div class="uk-inline-clip uk-transition-toggle">
+                    <a><img src="assets/imgs/yop.jpg" class="uk-border-circle" alt="Diana V."></a>
                     <div class="uk-transition-fade uk-position-cover uk-position-xlarge uk-overlay uk-overlay-default uk-flex uk-flex-center uk-flex-middle uk-border-circle">
                         <p> <span class="t-uva uk-text-lead">D</span>iseñadora gráfica & Front End developer con conocimientos de JavaScript, HTML5, CSS3, jQuery, Bootstrap, etc. <br> Experiencia en áreas de museografía, diseño editorial y edición de imágenes. <br> Gusto por la ingeniería en papel, caligrafía y lettering.</p>
                     </div>
@@ -134,44 +134,39 @@
 
             <h4 class="t-verde julius">Herramientas de diseño</h4>
             <div class="uk-child-width-1-5@m uk-text-center" uk-grid>
-                <div>
+                <div class="icono-xs">
                     <div class="uk-tile uk-padding-small">
-                        <a class="uk-margin-small" title="Avanzado" uk-tooltip="pos:bottom">
-                            <img src="assets/imgs/tools/ai.svg" alt="Illustrator">
-                        </a>
-                        <p class="t-g-claro">Illustator</p>
+                        <img src="assets/imgs/tools/ai.svg" alt="Illustrator">
+                        <p class="t-g-claro uk-margin-small uk-margin-remove-bottom">Illustator</p>
+                        <h6 class="t-g-medio uk-margin-remove">Avanzado</h6>
                     </div>
                 </div>
-                <div>
+                <div class="icono-xs">
                     <div class="uk-tile uk-padding-small">
-                        <a class="uk-margin-small" title="Avanzado" uk-tooltip="pos:bottom">
-                            <img src="assets/imgs/tools/ps.svg" alt="Photoshop">
-                        </a>
-                        <p class="t-g-claro">Photoshop</p>
+                        <img src="assets/imgs/tools/ps.svg" alt="Photoshop">
+                        <p class="t-g-claro uk-margin-small uk-margin-remove-bottom">Photoshop</p>
+                        <h6 class="t-g-medio uk-margin-remove">Avanzado</h6>
                     </div>
                 </div>
-                <div>
+                <div class="icono-xs">
                     <div class="uk-tile uk-padding-small">
-                        <a class="uk-margin-small" title="Intermedio" uk-tooltip="pos:bottom">
-                            <img src="assets/imgs/tools/id.svg" alt="InDesign">
-                        </a>
-                        <p class="t-g-claro">In Design</p>
+                        <img src="assets/imgs/tools/id.svg" alt="InDesign">
+                        <p class="t-g-claro uk-margin-small uk-margin-remove-bottom">In Design</p>
+                        <h6 class="t-g-medio uk-margin-remove">Intermedio</h6>
                     </div>
                 </div>
-                <div>
+                <div class="icono-xs">
                     <div class="uk-tile uk-padding-small">
-                        <a class="uk-margin-small" title="Básico" uk-tooltip="pos:bottom">
-                            <img src="assets/imgs/tools/au.svg" alt="Audition">
-                        </a>
-                        <p class="t-g-claro">Audition</p>
+                        <img src="assets/imgs/tools/au.svg" alt="Audition">
+                        <p class="t-g-claro uk-margin-small uk-margin-remove-bottom">Audition</p>
+                        <h6 class="t-g-medio uk-margin-remove">Básico</h6>
                     </div>
                 </div>
-                <div>
+                <div class="icono-xs">
                     <div class="uk-tile uk-padding-small">
-                        <a class="uk-margin-small" title="Básico" uk-tooltip="pos:bottom">
-                            <img src="assets/imgs/tools/ae.svg" alt="AfterEffects">
-                        </a>
-                        <p class="t-g-claro">After Effects</p>
+                        <img src="assets/imgs/tools/ae.svg" alt="AfterEffects">
+                        <p class="t-g-claro uk-margin-small uk-margin-remove-bottom">After Effects</p>
+                        <h6 class="t-g-medio uk-margin-remove">Básico</h6>
                     </div>
                 </div>
 
