--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a class="uk-navbar-item uk-logo t-verde" href="#home" uk-scroll><img src="assets/imgs/grulla.svg" alt="icono-grulla"></a>
             <div class="uk-navbar-left">
                 <ul class="uk-navbar-nav">
-                    <li class="uk-active">
+                    <li>
                         <a href="#home" uk-icon="icon: home" uk-scroll> <span class="uk-visible@m">Home</span> &nbsp;</a>
                     </li>
                     <li>
@@ -39,13 +39,13 @@
 
     <main id="home" class="uk-grid uk-grid-small uk-grid uk-child-width-1-1@s uk-child-width-1-2@m uk-padding-small" uk-scrollspy="target: > div; cls:uk-animation-fade; delay: 500">
         <div class="uk-flex uk-flex-column uk-flex-middle uk-flex-center">
-            <h1 class="uk-margin-medium-top uk-heading-primary t-uva asap-b">Diana Vázquez</h1>
-            <h2 class="uk-margin-remove t-g-azul julius">Front End <span class="t-uva asap-r">&</span> Diseño</h2>
+            <h1 id="nombre" class="uk-margin-medium-top uk-heading-primary t-uva asap-b">Diana Vázquez</h1>
+            <h2 id="profesion" class="uk-margin-remove t-g-azul julius">Front End <span class="t-uva asap-r">&</span> Diseño</h2>
             <a target="_blank" class="uk-button uk-button-danger uk-margin-medium-top uk-margin-medium-bottom" href="./assets/docs/CVDianaVazquez2017.pdf">Ver Curriculum</a>
         </div>
         <div class="uk-flex uk-flex-column uk-flex-middle uk-flex-center">
 
-            <div id="yop" class="uk-text-center animated bounce">
+            <div id="yop" class="uk-text-center uk-box-shadow-bottom animated bounce">
                 <div class="uk-inline-clip uk-transition-toggle">
                     <a><img src="assets/imgs/yop.jpg" class="uk-border-circle" alt="Diana V."></a>
                     <div class="uk-transition-fade uk-position-cover uk-position-xlarge uk-overlay uk-overlay-default uk-flex uk-flex-center uk-flex-middle uk-border-circle">
@@ -290,7 +290,7 @@
                 <p class="t-g-claro">D.C.G. Diana B. Vázquez Camacho</p>
             </div>
             <div>
-                <a class="uk-margin-small" title="55 6191 9111" uk-tooltip="pos:top">
+                <a class="uk-margin-small" title="55 6191 9111" uk-tooltip="pos:center">
                     <a href="tel://5561919111" class="t-g-claro" uk-icon="icon: phone; ratio: 1.7"></a>
                 </a>
                 <a class="uk-margin-small" title="anaid.xd@gmail.com" uk-tooltip="pos:top">
